# native_opencv

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/acediatic/native_opencv/: NativeOpencvPlugin.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/acediatic/native_opencv_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
ios/: native_opencv.modulemap  native_opencv.podspec
ios/Classes/: native_opencv.cpp
ios/Classes/OpticalFlow/: OpticalFlow.cpp  OpticalFlow.h
lib/: native_opencv.dart
